syntax = "proto3";

package maxbear.maxhire;
option go_package = "proto/gen/go/applications/v1;applicationspb";

import "google/protobuf/timestamp.proto";

service Applications {
    rpc SetApplications(SetApplicationsRequest) returns (ApplicationsResponse) {};

    rpc ListApplications(ListApplicationsRequest) returns (ApplicationsResponse) {};

    rpc SetInterviews(SetInterviewsRequest) returns (SetInterviewsResponse) {};
}

enum StatusType {
  PENDING = 0; // Must be the first element and 0
  REJECT = 1;
  SUCCESS = 2;
  APPLIED = 3;
}

enum InterviewType {
  UNSPECIFIED = 0; // Must be the first element and 0
  RECRUITER_SCREEN = 1;
  MANAGER_SCREEN = 2;
  TECH_CODING = 3;
  TECH_SYSTEM_DESIGN = 4;
  TEAM_MATCH = 5;
}

message Interview {
    google.protobuf.Timestamp datetime = 1;
    InterviewType interview_type = 2;
    int32 duration_min = 3; // Duration in minutes, default is 15 if not specified
}

message Application {
    google.protobuf.Timestamp date = 1;
    string company = 2;
    string position = 3;
    StatusType status = 4;
    repeated Interview interviews = 5;
}

message SetApplicationsRequest {
    repeated Application applications = 1;
}

message ApplicationsResponse {
    repeated Application applications = 1;
}

message ListApplicationsRequest {
    // Optional filter by application status type
    StatusType status = 1;
    
    // Optional filter by date range
    // If start_date is provided, only applications on or after this date are returned
    google.protobuf.Timestamp start_date = 2;
    
    // Optional filter by date range
    // If end_date is provided, only applications on or before this date are returned
    google.protobuf.Timestamp end_date = 3;
    
    // Optional filter by company name (exact match)
    string company = 4;
}

message SetInterviewsRequest {
    // Date to identify the application
    google.protobuf.Timestamp date = 1;
    
    // Company name to identify the application
    string company = 2;
    
    // Interviews to set for the application (replaces existing interviews)
    repeated Interview interviews = 3;
}

message SetInterviewsResponse {
    // The updated application with the set interviews
    Application application = 1;
}